--- a/moblie.html
+++ b/moblie.html
@@ -152,7 +152,7 @@
                                         <p>E-모빌리티, 그리고 스포츠카의 미래</p>
                                     </div>
                                     <button>
-                                        <img src="imges/right_arrow.png" alt="">
+                                        <img src="imges/mobile_rigth.png" alt="">
                                     </button>
                                 </div>
                                 <img src="imges/wallpaperbetter.png" alt="타이칸">
@@ -164,7 +164,7 @@
                                         <p>E-모빌리티, 그리고 스포츠카의 미래</p>
                                     </div>
                                     <button>
-                                        <img src="imges/right_arrow.png" alt="">
+                                        <img src="imges/mobile_rigth.png" alt="">
                                     </button>
                                 </div>
                                 <img src="imges/wallpaperbetter.png" alt="타이칸">
@@ -176,7 +176,7 @@
                                         <p>E-모빌리티, 그리고 스포츠카의 미래</p>
                                     </div>
                                     <button>
-                                        <img src="imges/right_arrow.png" alt="">
+                                        <img src="imges/mobile_rigth.png" alt="">
                                     </button>
                                 </div>
                                 <img src="imges/wallpaperbetter.png" alt="타이칸">
