--- a/view.html
+++ b/view.html
@@ -327,6 +327,54 @@
                                         </div>
                                     </div>
                                 </div>
+                                <div class="swiper-slide card_wrap">
+                                    <div class="card_text tb">
+                                        <span class="card_tit">Boxster 25 Years</span>
+                                        <h1 class="toptext">박스터 25주년 모델은<br />
+                                            여러 디테일이 녹아 있습니다.</h1>
+                                        <span class="price">133,100,000 KRW 부터</span>
+                                        <div class="card_btn">
+                                            <a href="#">더 알아보기 </a>
+                                            <i class="material-icons arrow">chevron_right</i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide card_wrap">
+                                    <div class="card_text tb">
+                                        <span class="card_tit">Boxster 25 Years</span>
+                                        <h1 class="toptext">박스터 25주년 모델은<br />
+                                            여러 디테일이 녹아 있습니다.</h1>
+                                        <span class="price">133,100,000 KRW 부터</span>
+                                        <div class="card_btn">
+                                            <a href="#">더 알아보기 </a>
+                                            <i class="material-icons arrow">chevron_right</i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide card_wrap">
+                                    <div class="card_text tb">
+                                        <span class="card_tit">Boxster 25 Years</span>
+                                        <h1 class="toptext">박스터 25주년 모델은<br />
+                                            여러 디테일이 녹아 있습니다.</h1>
+                                        <span class="price">133,100,000 KRW 부터</span>
+                                        <div class="card_btn">
+                                            <a href="#">더 알아보기 </a>
+                                            <i class="material-icons arrow">chevron_right</i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="swiper-slide card_wrap">
+                                    <div class="card_text tb">
+                                        <span class="card_tit">Boxster 25 Years</span>
+                                        <h1 class="toptext">박스터 25주년 모델은<br />
+                                            여러 디테일이 녹아 있습니다.</h1>
+                                        <span class="price">133,100,000 KRW 부터</span>
+                                        <div class="card_btn">
+                                            <a href="#">더 알아보기 </a>
+                                            <i class="material-icons arrow">chevron_right</i>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <div class="swiper-button-next main_slide card_slide_btn"><img src="imges/right_arrow.png"
                                     alt=""></div>
