--- a/moblie.html
+++ b/moblie.html
@@ -190,7 +190,7 @@
                 </div>
             </section>
             <section class="series">
-                <div class="series_wrappay inner">
+                <div class="series_wrappay inner card_inner">
                     <div>
                         <p class="tit_text">포르쉐.<br />전 시리즈 살펴보기</p>
                         <p class="sub_text">포르쉐의 모든 시리즈를 살펴보고<br />나만의 포르쉐를 만들어보세요.</p>
@@ -284,7 +284,7 @@
                 </div>
             </section>
             <section class="service">
-                <div class="service_wrappay inner">
+                <div class="service_wrappay inner card_inner">
                     <div>
                         <p class="tit_text">특별한.<br />포르쉐 구매 서비스</p>
                         <p class="sub_text">포르쉐의 다양한 서비스를 살펴보고 꿈꾸던<br />나만의 드림카를 만들어보세요.</p>
@@ -327,7 +327,7 @@
                 </div>
             </section>
             <section class="life">
-                <div class="life_wrappay inner">
+                <div class="life_wrappay inner card_inner">
                     <div>
                         <p class="tit_text">소중한.<br />나만의 포르쉐라이프</p>
                         <p class="sub_text">다양하고 즐겁고 소중한 포르쉐 라이프를<br />즐겨보세요.</p>
