--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div id="wrap">
         <header>
             <div class="inner header_inner">
-                <h1 class="logo"><img src="imges/logo_w.png" alt="logo"></h1>
+                <h1 class="logo"></h1>
                 <div class="info">
                     <div class="login">
                         <ul>
